# expenses-optimizer

./: .gitignore  Makefile  README.md  csv_test.csv  pyproject.toml  test_input.json
expenses_opt/: constants.py  exceptions.py
expenses_opt/models/: expense.py  input.py  portfolio.py
expenses_opt/optimization/: builder.py  optimizer.py  run.py
expenses_opt/utils/: utils.py
tests/: test_expenses.py  test_optimization.py  test_portfolio.py
